--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <form class="form-horizontal" method="POST" action="https://formspree.io/rangel.varnier@gmail.com">
+                    <form class="form-horizontal" method="POST" action="https://formspree.io/contato@ferrugemalerta.co">
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Nome:</label>
                             <div class="col-lg-10">
