--- a/index.html
+++ b/index.html
@@ -243,19 +243,19 @@
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Nome:</label>
                             <div class="col-lg-10">
-                                <input required type="text" placeholder="Nome" class="form-control">
+                                <input name="nome" required type="text" placeholder="Nome" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Email:</label>
                             <div class="col-lg-10">
-                                <input required type="email" placeholder="Email" class="form-control">
+                                <input name="email" required type="email" placeholder="Email" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Telefone:</label>
                             <div class="col-lg-10">
-                                <input required type="phone" placeholder="Telefone" class="form-control">
+                                <input name="telefone" required type="phone" placeholder="Telefone" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
