--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Assinar Ferrugem Alerta</a>
+                    <a class="navbar-brand" href="#contact">Assinar Ferrugem Alerta</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -193,7 +193,7 @@
                             1 alerta por dia
                         </li>
                         <li>
-                            <a class="btn btn-primary btn-xs" href="#">Assinar</a>
+                            <a class="btn btn-primary btn-xs" href="#contact">Assinar</a>
                         </li>
                     </ul>
                 </div>
@@ -219,7 +219,7 @@
                             <strong>Suporte</strong>
                         </li>
                         <li class="plan-action">
-                            <a class="btn btn-primary btn-xs" href="#">Assinar</a>
+                            <a class="btn btn-primary btn-xs" href="#contact">Assinar</a>
                         </li>
                     </ul>
                 </div>
