--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="row m-b-lg">
                 <div class="col-lg-12 text-center">
                     <div class="navy-line"></div>
-                    <h1>Fale conosco</h1>
+                    <h1>Assine o nosso plano</h1>
                 </div>
             </div>
             <div class="row">
