--- a/index.html
+++ b/index.html
@@ -2,15 +2,43 @@
 <html lang="en">
 
 <head>
+    <title>Ferrugem Alerta</title>
+    <meta charset="utf-8">
+    <meta http-equiv="Cache-Control" content="max-age=31536000" />
+    <meta http-equiv="Cache-Control" content="public" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta http-equiv="ETag" content="0f31201287e0e3f7e87c86ed26f2a492" />
+    <meta name="description" content="Saiba antecipadamente quando sua lavoura estrar em estado de risco" />
+    <meta property="og:description" content="Saiba antecipadamente quando sua lavoura estrar em estado de risco" />
+    <meta property="og:title" content="Ferrugem alerta" />
+
+    <link rel="apple-touch-icon" sizes="57x57" href="./img/logo/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./img/logo/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./img/logo/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./img/logo/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./img/logo/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./img/logo/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./img/logo/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./img/logo/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/logo/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./img/logo/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./img/logo/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/logo/favicon-16x16.png">
+    <link rel="manifest" href="./img/logo/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./img/logo/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- <link rel="canonical" href="https://gitinfo.surge.sh/index" />
+    <link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <!-- Add Your favicon here -->
     <!--<link rel="icon" href="img/favicon.ico">-->
-
-    <title>Ferrugem alerta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
